--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">CronicasDoVazio</string>
+    <string name="app_name">Crônicas Do Vazio</string>
+    <string name="app_name_2"> Crônicas \nDo Vazio</string>
     <string name="title_home">Fichas</string>
     <string name="title_dashboard">Criar Personagem</string>
     <string name="title_notifications">Notifications</string>
@@ -27,4 +28,9 @@
     <string name="inteligencia">inteligencia</string>
     <string name="sabedoria">sabedoria</string>
     <string name="fichaDoPersonagem">Ficha do Personagem</string>
+    <string name="usuario">Digite seu usuário:</string>
+    <string name="senha">Digite sua senha:</string>
+    <string name="login">Login</string>
+    <string name="registrar">Registrar</string>
+    <string name="ok">Ok</string>
 </resources>
